tests/init/tlet_uninit.nim
discard """
  errormsg: "'let' symbol requires an initialization"
"""

{.experimental: "strictDefs".}

let x: int